@@ -39,45 +39,44 @@ module directory pointing to the directory where resources are
 located. See INSTALL for details.
 """
 
+_ver = None
 def version():
     """Return the version number as a string."""
+
+    global _ver
+    if _ver:
+        return _ver
 
     filename = os.path.join(utilfuncs.resourceDirectory, "VERSION")
     try:
         with open(filename) as f:
-            return f.readline().strip()
+            _ver = f.readline().strip()
+        return _ver
     except EnvironmentError:
         sys.stderr.write(_errmsg)
         sys.exit(1)
 
-def latestVeuszVersion():
-    """Get latest version of Veusz from website.
+def versionToTuple(ver):
+    """Convert version to tuple, e.g. '2.1.1' -> (2,1,1)."""
+    return tuple([int(x) for x in ver.split('.')])
+
+def latestVersion():
+    """Get latest version of Veusz from website as string.
 
     Returns None if error
-
-    Returns object with elements
-    new_intver: list of version elements for new version e.g. (2,1,1),
-    new_ver: text of new version '2.1.1'
-    cur_intver and cur_ver same for current version
     """
 
     try:
         p = curlrequest.urlopen(
             'http://veusz.github.io/download/newest-version.html').read()
         latest = p.decode('ascii').strip()
-        intver = tuple([int(i) for i in latest.split('.')])
+        # check format
+        intver = versionToTuple(latest)
     except Exception:
         return None
 
-    thisver = version()
-
-    return utilfuncs.Struct(
-        new_intver=intver,
-        new_ver=latest,
-        cur_intver=tuple([int(x) for x in thisver.split('.')]),
-        cur_ver=thisver,
-        )
+    return latest
 
 # patch this to be True if you are packaging Veusz and want to disable
-# the version checks
-disableVeuszVersionChecks=False
+# version checks
+disableVersionChecks=False
