@@ -11,6 +11,7 @@ Changes in <next version>:
  * Hide fully transparent objects, rather than trying to draw them
  * Fix bug report script in Python 3
  * Fallback for paint device metrics, fixing bugs when PyQt is older than Qt
+ * Notify user updates to Veusz are available
 
 Changes in 2.1.1:
  * Fix dashed/dotted custom lines in EMF output
